--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.0.2",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-localstorage-simple": "^2.1.6",
+    "redux-logger": "^3.0.6",
+    "type-to-reducer": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
